--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -140,7 +140,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Recognition</h2>
+          <h2>Thesis and articles</h2>
         </header>
 
         {% for recognition in site.data.recognitions %}
@@ -160,7 +160,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Thesis and articles</h2>
+          <h2>Association</h2>
         </header>
 
         {% for association in site.data.associations %}
